# sfc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  draft-sfc-container-format-00.txt  draft-sfc-container-format-01.txt
.github/workflows/: build.yml  wasm.yml
cli/: cmd_info.cpp  cmd_info.h  cmd_pack.cpp  cmd_pack.h  cmd_repair.cpp  cmd_repair.h  cmd_unpack.cpp  cmd_unpack.h  cmd_verify.cpp  cmd_verify.h  main.cpp  utils.h
fuzz/: fuzz_decode.cpp  fuzz_global_header.cpp
include/sfc/: blake3_hash.h  byte_utils.h  chunk.h  compression.h  decoder.h  directory.h  encoder.h  error.h  filename_sanitize.h  gf_arithmetic.h  gf_matrix.h  global_header.h  manifest.h  reassembly.h  reed_solomon.h  segment_header.h  split_decoder.h  split_encoder.h  tlv.h  trailer.h  types.h  validation.h
scripts/: install-hooks.sh  pre-commit  pre-push
src/: blake3_hash.cpp  byte_utils.cpp  chunk.cpp  compression.cpp  decoder.cpp  directory.cpp  encoder.cpp  filename_sanitize.cpp  gf_arithmetic.cpp  gf_matrix.cpp  global_header.cpp  manifest.cpp  reassembly.cpp  reed_solomon.cpp  segment_header.cpp  split_decoder.cpp  split_encoder.cpp  tlv.cpp  trailer.cpp  validation.cpp
tests/: test_byte_utils.cpp  test_cli.cpp  test_directory.cpp  test_gf_phase2.cpp  test_metadata.cpp  test_p2.cpp  test_p5.cpp  test_phase3.cpp  test_phase4.cpp  test_phase5.cpp  test_phase6.cpp  test_phase7.cpp  test_phase8_9.cpp  test_split.cpp
wasm/: CMakeLists.txt  sfc_wasm.cpp  test_wasm.js
web/: index.html
